<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumsListFragment">

    <fragment
        android:id="@+id/albumsListFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.album.ListAlbumsFragment"
        android:label="@string/albums_menu_title"
        tools:layout="@layout/fragment_list_albums">
        <action
            android:name="co.edu.uniandes.miso.vinilos.view.album.AlbumDetailFragment"
            android:id="@+id/action_listAlbum_to_detailAlbum"
            app:destination="@id/albumDetailFragment" />
        <action
            android:name="co.edu.uniandes.miso.vinilos.view.album.NewAlbumFormFragment"
            android:id="@+id/action_listAlbum_to_newAlbumForm"
            app:destination="@id/new_album" />
    </fragment>

    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.album.AlbumTabFragment"
        android:label="Album Name"
        tools:layout="@layout/fragment_album_tab">
    </fragment>

    <fragment
        android:id="@+id/collectorsListFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.collector.ListCollectorsFragment"
        android:label="@string/collectors_menu_title"
        tools:layout="@layout/fragment_list_collectors">
        <action
            android:name="co.edu.uniandes.miso.vinilos.view.collector.CollectorDetailFragment"
            android:id="@+id/action_listCollectors_to_detailCollector"
            app:destination="@id/collectorDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/performerListFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.performer.ListPerformersFragment"
        android:label="@string/performer_menu_title"
        tools:layout="@layout/fragment_list_performers">
        <action
            android:name="co.edu.uniandes.miso.vinilos.view.performer.PerformerDetailContainerFragment"
            android:id="@+id/action_listPerformers_to_detailPerformer"
            app:destination="@id/performerDetailContainerFragment" />
    </fragment>

    <fragment
        android:id="@+id/performerDetailContainerFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.performer.PerformerDetailContainerFragment"
        android:label="Artist Name"
        tools:layout="@layout/performer_detail_container"/>

    <fragment
        android:id="@+id/userSelectionFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.userselection.UserSelectionFragment"
        android:label="@string/user_selection_fragment_title"
        tools:layout="@layout/fragment_user_selection">
        <action
            android:name="co.edu.uniandes.miso.vinilos.view.userselection.UserSelectionListCollectorsFragment"
            android:id="@+id/action_user_selection_to_collectors"
            app:destination="@id/userSelectionCollectorFragment" />
    </fragment>

    <fragment
        android:id="@+id/userSelectionCollectorFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.userselection.UserSelectionListCollectorsFragment"
        android:label="@string/user_selection_collector_fragment_title"
        tools:layout="@layout/fragment_list_user_selection_collectors">

    </fragment>

    <fragment
        android:id="@+id/collectorDetailFragment"
        android:name="co.edu.uniandes.miso.vinilos.view.collector.CollectorDetailFragment"
        tools:layout="@layout/fragment_collector_detail">
    </fragment>

    <fragment
        android:id="@+id/new_album"
        android:name="co.edu.uniandes.miso.vinilos.view.album.NewAlbumFormFragment"
        tools:layout="@layout/new_album_form">
    </fragment>

    <!-- If PerformerDetailFragment is inside PerformerDetailContainerFragment, make sure it's dynamically loaded here -->
</navigation>
